<resources>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="appName">ICT Calculate Grade</string>
    <string name="Lastname">Lastname</string>
    <string name="Firstname">Firstname</string>
    <string name="Confirm">Confirm</string>
    <string name="Comfirmpassword">Comfirmpassword</string>
    <string name="grade">Grade</string>
    <string name="logout">Logout</string>
    <string-array name="education_level">
        <item>Bachelor Degree</item>
        <item>Master Degree</item>
    </string-array>
    <string name="firstNameWarnS">Please Input Firstname</string>
    <string name="lastNameWarnS">Please Input Lastname</string>
    <string name="emailWarnS_invalid">Email Invalid</string>
    <string name="emailWarnS_noInput">Please Input Email</string>
    <string name="passwordWarnS_short">Password must be at least 7 characters</string>
    <string name="loading">loading</string>
    <string name="passwordWarnS_invalid">Password must be either alphabet or number</string>
    <string name="confirmPasswordWarnS_notMatch">Password is not match</string>
    <string name="Changepassword">Changepassword</string>
    <string name="Complete">Complete</string>
    <string name="Oldpassword">Oldpassword</string>
    <string name="Newpassword">Newpassword</string>
    <string name="SaveMe">SaveMe</string>
    <string name="Camera">Camera</string>
    <string name="Select">Select Photo in this device</string>
    <string name="app_name">MUICT Grade Calculator</string>
    <string name="AddCourse">AddCourse</string>
    <string name="Course">Course</string>
    <string name="Alphagrade">Alphagrade</string>
    <string name="changePassSuccess">Change Password Success</string>
    <string name="changePassFail">Change Password Fail</string>
    <string name="muict_grade_calculator">MUICT Grade Calculator</string>
    <string name="Remove">Remove</string>
    <string name="oldPassWrong">Old Password is Incorrect</string>
    <string name="newPassMatchOldPass">New password must be different!!!</string>
    <string name="year1">Year1</string>
    <string name="year2">Year2</string>
    <string name="year3">Year3</string>
    <string name="year4">Year4</string>
    <string name="semester1">Semester1</string>
    <string name="semester2">Semester2</string>
    <string name="semester3">Semester3</string>
    <string name="masterDegree">Master Degree</string>
    <string name="facebook_app_id" translatable="false">317866295557485</string>
    <string name="facebook_login_protocol_scheam" translatable="false">fb317866295557485</string>
    <string name="Changeprofilephoto">Change profile photo</string>
    <string name="Choosecourse">Choose course</string>
    <string name="Selectoneoption">Select one option</string>
    <string name="updateCourse">Update Grade</string>


</resources>
