<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="Sign Up"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        tools:text="@string/signup" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Firstname"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:background="@drawable/shapeemial"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        tools:text="@string/Firstname"

        android:textColor="@color/fir"
        android:textColorHint="@color/white"
        android:textColorHighlight="@color/white"/>
    <TextView
        android:id="@+id/textView17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Lastname"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/lastName_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:background="@drawable/shapeemial"
        android:ems="10"
        android:hint="@string/Lastname"
        android:inputType="textPersonName"
        android:textColor="@color/fir"
        android:textColorHint="@color/fir"
        android:textColorHighlight="@color/fir"/>
    <TextView
        android:id="@+id/textView18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="24sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:background="@drawable/shapeemial"
        android:drawablePadding="10dp"
        android:hint="Email"
        android:textColor="@color/fir"
        android:textColorHint="@color/fir"
        android:textColorHighlight="@color/fir"/>
    <TextView
        android:id="@+id/textView19"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="24sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:background="@drawable/shapeemial"
        android:drawablePadding="10dp"
        android:hint="Password"
        android:textColor="@color/fir"
        android:textColorHint="@color/fir"
        android:textColorHighlight="@color/fir"/>
    <TextView
        android:id="@+id/textView20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Comfirmpassword"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/confirmPassword_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/shapeemial"
        android:hint="@string/Comfirmpassword"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/fir"
        android:textColorHighlight="@color/fir"
        android:textColorHint="@color/fir" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">



    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bgbutton"
        android:padding="15dp"
        android:shadowColor="@android:color/transparent"
        android:text="Sign Up"
        android:textColor="@color/fir" />




</LinearLayout>