<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Setting"
    android:background="#778899"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_gravity="center_horizontal"
                android:src="@android:drawable/sym_def_app_icon"
                app:civ_border_color="@color/border"
                app:civ_border_width="2dp" />

            <TextView
                android:id="@+id/settingUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="Noppadol Ass"
                android:textColor="@color/border"
                android:textSize="21sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/changePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="Change profile photo"
                android:textColor="#323a45"
                android:textSize="21sp"
                android:textStyle="bold" />

        </LinearLayout>


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="290dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="268dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/firstName_setting"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/shapeemial"
                    android:ems="10"
                    android:hint="@string/Firstname"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/lastName_setting"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/shapeemial"
                    android:ems="10"
                    android:hint="@string/Lastname"
                    android:inputType="textPersonName" />


                <TextView
                    android:id="@+id/changePass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/Changepassword"
                    android:textColor="#323a45"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/logoutTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/logout"
                    android:textColor="#323a45"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/Saveme"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/bgbutton"
                    android:padding="15dp"
                    android:shadowColor="@android:color/transparent"
                    android:text="Save Me"
                    android:textColor="@color/fir"
                    tools:text="@string/SaveMe" />


            </LinearLayout>
        </android.support.constraint.ConstraintLayout>

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>