<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="350dp"
    android:layout_height="475dp"
    android:background="@color/border"
    android:padding="5dp"
    android:layout_gravity="center">
    <TextView
        android:id="@+id/txtclose"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:textColor="@color/fir"
        android:text="X"
        android:textStyle="bold"
        android:layout_gravity="end"
        android:gravity="center">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="Changing Password"
            android:textColor="@color/fir"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="--------------------------------------------------------------------------------"
            android:textColor="@color/fir" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Old password"
                android:textColor="@color/fir"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/oldPass"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/shapeemial"
                android:ems="10"
                android:inputType="textPassword"
                tools:text="@string/Oldpassword" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="New password"
                android:textColor="@color/fir"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/newPass"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/shapeemial"
                android:ems="10"
                android:inputType="textPassword"
                tools:text="@string/Newpassword" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Confirm Password"
                android:textColor="@color/fir"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/conNewPass"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/shapeemial"
                android:ems="10"
                android:inputType="textPassword"
                tools:text="@string/Comfirmpassword" />
        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:background="@drawable/bgbutton"
        android:text="@string/Complete"
        android:textColor="@color/border"
        tools:text="@string/Complete" />

</LinearLayout>